--- a/.github/actions/test_sqllogic_standalone_linux/action.yml
+++ b/.github/actions/test_sqllogic_standalone_linux/action.yml
@@ -1,10 +1,6 @@
 name: "Test sqllogic Standalone"
 description: "Running sqllogic tests in standalone mode"
 inputs:
-  target:
-    description: ""
-    required: true
-    default: "x86_64-unknown-linux-gnu"
   dirs:
     description: "logic test suites dirs"
     required: true
@@ -24,17 +20,13 @@ inputs:
   enable_table_meta_cache:
     description: "Enable table meta cache"
     required: false
-    default: true
+    default: "true"
 
 runs:
   using: "composite"
   steps:
-    - uses: ./.github/actions/setup_bendsql
-    - name: Download artifact
-      uses: ./.github/actions/artifact_download
+    - uses: ./.github/actions/setup_test
       with:
-        sha: ${{ github.sha }}
-        target: ${{ inputs.target }}
         artifacts: sqllogictests,meta,query
 
     - name: Run sqllogic Tests with Standalone mode
