--- a/.github/workflows/reuse.linux.yml
+++ b/.github/workflows/reuse.linux.yml
@@ -68,7 +68,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: sccache-build
+          name: sccache-build-${{ matrix.arch }}
           path: target/sccache.log
 
   # build_address_sanitizer:
