--- a/.github/actions/setup_test/action.yml
+++ b/.github/actions/setup_test/action.yml
@@ -41,4 +41,4 @@ runs:
     - name: setup java env
       shell: bash
       run: |
-        echo "LD_LIBRARY_PATH=${{ env.JAVA_HOME }}/lib/server:${{ env.LD_LIBRARY_PATH }}" >> $GITHUB_ENV"
+        echo "LD_LIBRARY_PATH=${{ env.JAVA_HOME }}/lib/server:${{ env.LD_LIBRARY_PATH }}" >> $GITHUB_ENV
