--- a/.github/actions/test_compat_meta_query/action.yml
+++ b/.github/actions/test_compat_meta_query/action.yml
@@ -1,18 +1,10 @@
 name: "Test old metasrv is compatible with new query; new meta is compatible with old query"
 description: "Download old binaries and current binaries, run stateless test with old `meta` and latest `query`"
-inputs:
-  target:
-    description: ""
-    required: true
-    default: "x86_64-unknown-linux-gnu"
 runs:
   using: "composite"
   steps:
-    - name: Download artifact
-      uses: ./.github/actions/artifact_download
+    - uses: ./.github/actions/setup_test
       with:
-        sha: ${{ github.sha }}
-        target: ${{ inputs.target }}
         path: ./bins/current
         artifacts: sqllogictests,meta,query
 
