chore(ci): stable release ignore patch versions (#17228)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           echo "Creating release ${{ steps.bump.outputs.tag }} from ${{ steps.bump.outputs.sha }}"
           if [[ "${{ inputs.stable }}" == "true" ]]; then
-            previous=$(gh release list --limit 1 --exclude-pre-releases | cut -f 1)
+            previous=$(gh release list --limit 10 --exclude-pre-releases | grep -v p | head -n 1 | cut -f 1)
             echo "Stable release with previous release: $previous"
             gh release create ${{ steps.bump.outputs.tag }} --target ${{ steps.bump.outputs.sha }} --generate-notes --notes-start-tag $previous --latest --draft
           else
