fix: Upload to stage in streaming way instead
Signed-off-by: Xuanwo <github@xuanwo.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -240,6 +240,7 @@ async-compression = { git = "https://github.com/datafuse-extras/async-compressio
 async-recursion = "1.1.1"
 async-stream = "0.3.3"
 async-trait = { version = "0.1.77" }
+async-compat = { version = "0.2" }
 backoff = "0.4" # FIXME: use backon to replace this.
 backon = "1"
 backtrace = { version = "0.3.73", features = [
