--- a/src/query/service/Cargo.toml
+++ b/src/query/service/Cargo.toml
@@ -38,6 +38,7 @@ arrow-udf-python = { workspace = true, optional = true }
 arrow-udf-wasm = { workspace = true }
 async-backtrace = { workspace = true }
 async-channel = { workspace = true }
+async-compat = { workspace = true }
 async-recursion = { workspace = true }
 async-stream = { workspace = true }
 async-trait = { workspace = true }
