--- a/Cargo.toml
+++ b/Cargo.toml
@@ -369,10 +369,10 @@ num-derive = "0.3.3"
 num-traits = "0.2.19"
 num_cpus = "1.13.1"
 object = "0.36.5"
-object_store_opendal = { git = "https://github.com/apache/opendal", package = "object_store_opendal", rev = "f7f9990" }
+object_store_opendal = { version = "0.49.0" }
 once_cell = "1.15.0"
 openai_api_rust = "0.1"
-opendal = { version = "0.51", git = "https://github.com/apache/opendal", rev = "f7f9990", features = [
+opendal = { version = "0.51.1", features = [
     "layers-fastrace",
     "layers-prometheus-client",
     "layers-async-backtrace",
