chore(ci): update release workflow

--- a/.github/actions/test_ee_sqllogic_standalone_linux/action.yml
+++ b/.github/actions/test_ee_sqllogic_standalone_linux/action.yml
@@ -1,16 +1,12 @@
 name: "Test ee sqllogic Standalone"
 description: "Running ee sqllogic tests in standalone mode"
 inputs:
-  target:
-    description: ""
-    required: true
-    default: "x86_64-unknown-linux-gnu"
   dirs:
     description: "logic test suites dirs"
     required: true
     default: ""
   handlers:
-    description: "logic test handlers, mysql,http,clickhouse"
+    description: "logic test handlers, mysql,http,hybrid"
     required: true
     default: ""
   storage-format:
@@ -21,12 +17,8 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: ./.github/actions/setup_bendsql
-    - name: Download artifact
-      uses: ./.github/actions/artifact_download
+    - uses: ./.github/actions/setup_test
       with:
-        sha: ${{ github.sha }}
-        target: ${{ inputs.target }}
         artifacts: sqllogictests,meta,query
 
     - name: Run sqllogic Tests with Standalone mode
