--- a/.github/actions/test_sqllogic_standalone_linux_minio/action.yml
+++ b/.github/actions/test_sqllogic_standalone_linux_minio/action.yml
@@ -6,7 +6,7 @@ inputs:
     required: true
     default: ""
   handlers:
-    description: "logic test handlers, mysql,http,hybrid"
+    description: "logic test handlers, mysql,http"
     required: true
     default: ""
   storage-format:
