--- a/.github/actions/test_sqllogic_standalone_linux_minio/action.yml
+++ b/.github/actions/test_sqllogic_standalone_linux_minio/action.yml
@@ -1,16 +1,12 @@
 name: "Test sqllogic Standalone(minio)"
 description: "Running sqllogic tests in standalone mode"
 inputs:
-  target:
-    description: ""
-    required: true
-    default: "x86_64-unknown-linux-gnu"
   dirs:
     description: "logic test suites dirs"
     required: true
     default: ""
   handlers:
-    description: "logic test handlers, mysql,http,clickhouse"
+    description: "logic test handlers, mysql,http"
     required: true
     default: ""
   storage-format:
@@ -21,12 +17,8 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: ./.github/actions/setup_bendsql
-    - name: Download artifact
-      uses: ./.github/actions/artifact_download
+    - uses: ./.github/actions/setup_test
       with:
-        sha: ${{ github.sha }}
-        target: ${{ inputs.target }}
         artifacts: sqllogictests,meta,query
 
     - name: Minio Setup for (ubuntu-latest only)
@@ -45,6 +37,7 @@ runs:
         export AWS_EC2_METADATA_DISABLED=true
 
         aws --endpoint-url http://127.0.0.1:9900/ s3 mb s3://testbucket
+        aws --endpoint-url http://127.0.0.1:9900/ s3 mb s3://spillbucket
 
     - name: Run sqllogic Tests with Standalone mode
       if: inputs.storage-format == 'all' || inputs.storage-format == 'parquet'
