--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,6 +107,7 @@ members = [
     "src/meta/service",
     "tests/sqllogictests",
     "src/tests/sqlsmith",
+    "src/bendsave"
 ]
 
 # Workspace dependencies
