--- a/src/query/formats/Cargo.toml
+++ b/src/query/formats/Cargo.toml
@@ -39,6 +39,7 @@ num = { workspace = true }
 num-traits = { workspace = true }
 roaring = { workspace = true, features = ["serde"] }
 serde_json = { workspace = true }
+goldenfile = { workspace = true }
 
 [dev-dependencies]
 
