--- a/src/query/formats/Cargo.toml
+++ b/src/query/formats/Cargo.toml
@@ -29,6 +29,7 @@ base64 = { workspace = true }
 bstr = { workspace = true }
 chrono-tz = { workspace = true }
 geozero = { workspace = true }
+goldenfile = { workspace = true }
 hex = { workspace = true }
 jiff = { workspace = true }
 jsonb = { workspace = true }
