--- a/.cargo/audit.toml
+++ b/.cargo/audit.toml
@@ -55,4 +55,8 @@ ignore = [
     "RUSTSEC-2024-0421",
     # gix-worktree-state nonexclusive checkout sets executable files world-writable
     "RUSTSEC-2025-0001",
+    # `fast-float`: Segmentation fault due to lack of bound check
+    "RUSTSEC-2025-0003",
+    # ssl::select_next_proto use after free
+    "RUSTSEC-2025-0004",
 ]
