--- a/.github/actions/test_benchmark/action.yml
+++ b/.github/actions/test_benchmark/action.yml
@@ -24,6 +24,7 @@ runs:
       run: |
         ./benchmark_local.sh
     - name: Check Result
+      working-directory: benchmark/clickbench
       shell: bash
       run: |
         cat result.json
