--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -24,7 +24,7 @@ jobs:
         id: lychee
         uses: lycheeverse/lychee-action@v1.8.0
         with:
-          args: "--base . --cache --max-cache-age 1d . --exclude 'https://github.com/databendlabs/databend/issues/' --exclude 'https?://twitter\\.com(?:/.*$)?$'"
+          args: "--base . --cache --max-cache-age 1d . --exclude 'https://github\.com/datafuselabs/databend/issues/.*' --exclude 'https?://github\.com/databendlabs/databend/issues/.*' --exclude 'https?://twitter\.com(?:/.*$)?$'"
 
       - name: Save lychee cache
         uses: actions/cache/save@v3
