--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,8 +79,8 @@ jobs:
 
   changelog:
     runs-on: ubuntu-latest
-    if: inputs.type == 'stable'
     needs: create_release
+    if: needs.create_release.outputs.type == 'stable'
     steps:
       - name: Checkout Docs
         uses: actions/checkout@v4
@@ -291,7 +291,7 @@ jobs:
           REPO_DOCKERHUB: ${{ steps.login.outputs.dockerhub_repo }}
           REPO_ECR: ${{ steps.login.outputs.ecr_repo }}
           VERSION: ${{ needs.create_release.outputs.version }}
-          TYPE: ${{ inputs.type }}
+          TYPE: ${{ needs.create_release.outputs.type }}
         with:
           script: |
             const { VERSION, TYPE, REPO_DOCKERHUB, REPO_ECR } = process.env;
@@ -371,7 +371,7 @@ jobs:
           REPO_DOCKERHUB: ${{ steps.login.outputs.dockerhub_repo }}
           REPO_ECR: ${{ steps.login.outputs.ecr_repo }}
           VERSION: ${{ needs.create_release.outputs.version }}
-          TYPE: ${{ inputs.type }}
+          TYPE: ${{ needs.create_release.outputs.type }}
         with:
           script: |
             const { VERSION, TYPE, REPO_DOCKERHUB, REPO_ECR } = process.env;
@@ -458,8 +458,8 @@ jobs:
 
   deb:
     runs-on: ubuntu-latest
-    if: inputs.type == 'stable'
     needs: [create_release, distribution]
+    if: needs.create_release.outputs.type == 'stable'
     steps:
       - uses: actions/checkout@v4
         with:
