--- a/src/query/storages/common/table_meta/Cargo.toml
+++ b/src/query/storages/common/table_meta/Cargo.toml
@@ -11,6 +11,9 @@ dev = ["snap"]
 
 [dependencies]
 
+arrow = { workspace = true }
+bincode_v1 = { workspace = true }
+chrono = { workspace = true }
 databend-common-base = { workspace = true }
 databend-common-datavalues = { workspace = true }
 databend-common-exception = { workspace = true }
@@ -18,11 +21,9 @@ databend-common-expression = { workspace = true }
 databend-common-io = { workspace = true }
 databend-common-native = { workspace = true }
 databend-common-storage = { workspace = true }
-
-bincode_v1 = { workspace = true }
-chrono = { workspace = true }
 enum-as-inner = { workspace = true }
 log = { workspace = true }
+once_cell = { workspace = true }
 parquet = { workspace = true }
 rmp-serde = { workspace = true }
 serde = { workspace = true }
