--- a/src/query/functions/Cargo.toml
+++ b/src/query/functions/Cargo.toml
@@ -53,6 +53,7 @@ naive-cityhash = { workspace = true }
 num-traits = { workspace = true }
 once_cell = { workspace = true }
 proj4rs = { workspace = true }
+proptest = { workspace = true }
 rand = { workspace = true }
 regex = { workspace = true }
 roaring = { workspace = true }
